keitaro link and contact form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<h3>Python fundamentals course at Keitaro</h3>
 								<p>A Python traning course for companies. Created as part of the Keitaro traning platform. The course involved video lectures and interactive code along jupyter notebook exercises.</p>
 								<ul class="actions">
-									<li><a href="#" class="button small" download rel="noopener noreferrer" target="_blank">Link</a></li>
+									<li><a href="https://keitarotraining.com/product/python-fundamentals" class="button small" download rel="noopener noreferrer" target="_blank">Link</a></li>
 								</ul>
 							</article>
 
@@ -102,6 +102,8 @@
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>For further business inquries feel free to send me an email or contact me on social media</p>
+						
+						<!--
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -119,6 +121,8 @@
 									<label for="demo-human">I am a human and not a robot</label>
 								</div>
 							</div>
+							-->	
+
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
