fix research links and onclick email

--- a/index.html
+++ b/index.html
@@ -90,12 +90,10 @@
 							<li>Auto-CORPus: A Natural Language Processing Tool for Standardising and
 								Reusing Biomedical Literature
 								Frontiers in Digital Health · Jan 21, 2022
-								<a href="https://www.frontiersin.org/articles/10.3389/fdgth.2022.788124/abstract">https://www.frontiersin.org/articles/10.3389/fdgth.2022.788124/abstract</a>
+								<a href="https://doi.org/10.3389/fdgth.2022.788124">Original article in Frontiers in Digital Health </a>
 							<li>Auto-CORPus: Automated and Consistent Outputs from Research Publications
 								UK healthcare text analytics conference 2021 (HEALTAC2021) · Jun 15, 2021
-								<a href="https://figshare.com/articles/poster/Auto-CORPus_Automated_and_Consistent_
-								Outputs_from_Research_Publications/14784858/"> https://figshare.com/articles/poster/Auto-CORPus_Automated_and_Consistent_
-								Outputs_from_Research_Publications/14784858/</a>
+								<a href="https://doi.org/10.6084/m9.figshare.14784858">Poster at the UK healthcare text analytics conference 2021</a>
 						</ol>
 
 				<!-- Three -->
@@ -139,7 +137,7 @@
 									-->
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">f.makraduli20@alumni.imperial.ac.uk</a>
+										<a href="#"  onclick="return false" >f.makraduli20@alumni.imperial.ac.uk</a>
 									</li>
 								</ul>
 							</div>
