--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 							<li>Auto-CORPus: A Natural Language Processing Tool for Standardising and
 								Reusing Biomedical Literature
 								Frontiers in Digital Health · Jan 21, 2022
-								<a href="https://doi.org/10.3389/fdgth.2022.788124">Original article in Frontiers in Digital Health </a>
+								<a href="https://doi.org/10.3389/fdgth.2022.788124" download rel="noopener noreferrer" target="_blank" >Original article in Frontiers in Digital Health </a>
 							<li>Auto-CORPus: Automated and Consistent Outputs from Research Publications
 								UK healthcare text analytics conference 2021 (HEALTAC2021) · Jun 15, 2021
-								<a href="https://doi.org/10.6084/m9.figshare.14784858">Poster at the UK healthcare text analytics conference 2021</a>
+								<a href="https://doi.org/10.6084/m9.figshare.14784858" download rel="noopener noreferrer" target="_blank" >Poster at the UK healthcare text analytics conference 2021</a>
 						</ol>
 
 				<!-- Three -->
@@ -137,7 +137,7 @@
 									-->
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#"  onclick="return false" >f.makraduli20@alumni.imperial.ac.uk</a>
+										<a href="mailto:f.makraduli20@alumni.imperial.ac.uk">f.makraduli20@alumni.imperial.ac.uk</a>
 									</li>
 								</ul>
 							</div>
