--- a/index.html
+++ b/index.html
@@ -135,9 +135,11 @@
 										000-000-0000
 									</li>
 									-->
+									<!--
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:f.makraduli20@alumni.imperial.ac.uk">f.makraduli20@alumni.imperial.ac.uk</a>
+										<a href="mailto:"></a>
+									-->
 									</li>
 								</ul>
 							</div>
