--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								Pytorch model. A training example for the sentence transformer is also given for fine-tuning.
 								</p>
 								<ul class="actions">
-									<!-- <li><a href="https://github.com/fm1320/captionmodel" class="button small" download rel="noopener noreferrer" target="_blank">Link</a></li> -->
+									<li><a href="https://github.com/fm1320/captionmodel" class="button small" download rel="noopener noreferrer" target="_blank">Link</a></li> 
 								</ul>
 							</article>
 							
