--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 								The training dataset was specifically created for the purpose of the project. It uses a Siamese transformer network to capture the sentiment of the songs.
 								</p>
 								<ul class="actions">
-									<li><a href="https://github.com/fm1320/song-vibe" class="button small" download rel="noopener noreferrer" target="_blank">Link</a></li> 
-									<li><a href="https://mood-music.streamlit.app/" class="button small" download rel="noopener noreferrer" target="_blank">Link</a></li>
+									<li><a href="https://github.com/fm1320/song-vibe" class="button small" download rel="noopener noreferrer" target="_blank">Repo</a></li> 
+									<li><a href="https://mood-music.streamlit.app/" class="button small" download rel="noopener noreferrer" target="_blank">Try it out</a></li>
 								</ul>
 							</article>
 							
